# moduloreidentificacao

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  README.md  WORKFLOW.md  config_example.yml  environment.yml  issues.json  process.md  pyproject.toml  requirements-dev.txt  requirements.txt  windows_pymetis.md
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
academic/: README.md
bugs/: execution.md  explanation.md  pendencia_dsweep_test_assertions.md
docs/: achados_divergencias.md  algorithm_notes.md  artifact_writing_checklist.md  artigo_execucoes.md  artigo_rastreabilidade.md  data_dictionary.md  decision_log.md  dsweep_previa_garantia_dados.md  entregaveis.md  limitations.md  mapa_estrutural.md  metrics_definitions.md  milestone_29_05.md  milestones_moduloreidentificacao.md  pipeline.md  preprocessing_decision.md  progress.md  progress_archive.md  regras_anonimizacao.md  regras_experimentos.md  regras_sementes.md  relatorio_execucoes.md  relatorio_rastreabilidade.md  reproducibility.md  results_baseline.md  results_dsweep.md  results_enron.md  results_enron_dsweep.md  scope.md  validacao_k_anonimato.md
experiments/: __init__.py  make_baseline_table.py  make_enron_dsweep_table.py  make_enron_table.py  run.py  run_k_sweep.py  run_milestone_29_05.py  run_validacao_k_anonimato.py
publications/: README.md
references/: DP_GRAPH_REFERENCES.md  README.md
scripts/: activate_env.ps1  article_figures.py  atualizar_vscode.ps1  figuras_canonicas.md  measure_egonets.py  setup-dev.ps1  (+1 more)
(+86 files in other folders)
