[project]
name = "moduloreidentificacao"
version = "0.1.0"
description = "Baseline de reidentificação em redes sociais anonimizadas. Tese de doutorado em geração de redes sociais sintéticas — PPGInf/UFPR."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

# ----------------------------------------------------------------------
# ruff — linting e formatação
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "data",
    "experiments/logs",
    "results",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]   # test function/argument naming relaxed

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
